briefdoc facet list styling, fulldoc related content table styling some translation changes/additions

--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -334,6 +334,10 @@ table.item caption {
     display: none;
 }
 
+table#tbl-related-items td {
+    background: #fff;
+}
+
 
 /* USER section styles ***************************************************************************/
 
@@ -438,4 +442,74 @@ button.fg-button, input.fg-button {
 
 .exceptions {
     margin: 2em 0;
+}
+
+/**
+ * ----------------------------------------------------------------------------
+ * toggleElements.css - Stylesheet for jQuery-Plugin toggleElements
+ * ----------------------------------------------------------------------------
+ */
+
+/* Screen ------------------------------------------------------------------- */
+
+@media projection, screen {
+
+/* Toggler - default style */
+    .toggler {
+        margin: 10px 0;
+        border-bottom: solid 1px #ccc;
+        cursor: pointer;
+        font-size: 1.0em;
+        font-weight: bold;
+        line-height: 30px;
+        display: block;
+        text-decoration: none;
+    }
+
+    .toggler-closed {
+        color: #333;
+        padding-left: 8px;
+        height: 30px;
+        background: #fff url(../images/togglerc.gif) center right no-repeat;
+
+    }
+
+    .toggler-closed:hover {
+        color: #0162CD;
+        padding-left: 8px;
+        height: 30px;
+        background: #fff url(../images/togglerch.gif) center right no-repeat;
+    }
+
+    .toggler-opened {
+        color: #333;
+        padding-left: 8px;
+        height: 30px;
+        background: #fff url(../images/togglero.gif) center right no-repeat;
+    }
+
+    .toggler-opened:hover {
+        color: #0162CD;
+        padding-left: 8px;
+        height: 30px;
+        background: #fff url(../images/toggleroh.gif) center right no-repeat;
+
+    }
+
+/* Container - default style */
+    .toggler-c {
+    }
+
+    .toggler-c-closed {
+        background: transparent;
+        margin: -10px 0px 10px 0px;
+        padding: 4px;
+    }
+
+    .toggler-c-opened {
+        margin: -10px 0px 10px 0px;
+        padding: 4px;
+        background: #fff;
+    }
+
 }
