--- a/portal/src/main/webapp/theme/cw/css/type.css
+++ b/portal/src/main/webapp/theme/cw/css/type.css
@@ -35,7 +35,7 @@ h1, h2, h3, h4, h5, h6, ul, ol, dl, p, blockquote { padding-right: 20px; }
 
 h1, h2, h3, h4, h5, h6 { color: #000; }
 
-h1 { font-family: Arial, Verdana, sans-serif; font-size: 2.2em; font-weight: normal; line-height: 2; margin-bottom: 0; margin-top: -12px; }
+h1 { font-family: Arial, Verdana, sans-serif; font-size: 2.2em; font-weight: normal; line-height: 2; }
 h2 { font-size: 1.5em; font-weight: normal; line-height: 1; margin-bottom: 0.75em; margin-top: 1.25em; }
 h3, .content_add h2 { font-size: 1.2em; font-weight: bold; line-height: 1.3333; margin-bottom: 0.4343em; margin-top: 1em; }
 h4,
