--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -223,11 +223,11 @@ ul a:hover, ul a:visited:hover {
 /* Search Forms **********************************************************************************/
 
 #search #search_simple {
-    padding: 2em 1em;
+    padding: 0 0 0 0;
 }
 
 #search .search_home {
-    margin: 0 0 2em 0;
+    margin: 0 0 4em 0;
 }
 
 #search .search_home input.txt-input,
@@ -276,7 +276,7 @@ ul a:hover, ul a:visited:hover {
 #query_breadcrumbs h3 {
     float: left;
     padding: 0;
-    margin: 2px 0 0 0;
+    margin: 0;
     font-weight: normal;
 }
 
@@ -287,7 +287,7 @@ ul.nav_query_breadcrumbs {
 
 ul.nav_query_breadcrumbs li {
     display: inline;
-    font-size: 1.2em;
+    /*font-size: 100%;*/
 }
 
 ul.nav_query_breadcrumbs li.nobg {
@@ -530,7 +530,7 @@ button.fg-button, input.fg-button {
 .toggler-closed {
     color: #333;
     padding-left: 8px;
-    height: 30px;
+    /*height: 30px;*/
     background: #fff url(../images/togglerc.gif) center right no-repeat;
 
 }
