changed the query breadcrumb presentation to be done in a definition list instead of an unordered list. Display of related items query breadcrumbs much improved.

--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -274,10 +274,21 @@ ul a:hover, ul a:visited:hover {
     height: 42px;
     line-height: 42px;
     vertical-align: baseline;
+}
 
+#query_breadcrumbs dl dt,
+#query_breadcrumbs dl dd {
+    display: inline;
+}
 
+#query_breadcrumbs dl dd {
+    background: url(skin/arrows.png) 0 4px no-repeat;
+    margin: 0;
+    padding-left: 1.25em;
+}
 
-
+#query_breadcrumbs dl dd.nobg {
+    background: none;
 }
 
 #query_breadcrumbs h3 {
