--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -255,11 +255,14 @@ text-decoration: none;
 /* Results page **********************************************************************************/
 #query_breadcrumbs
 {
-	height:42px;
-	line-height:42px;
-	margin:1em 0;
+	margin:2em 0;
 	padding:0;
 	vertical-align:baseline;
+}
+
+#query_breadcrumbs dl dt, #query_breadcrumbs dl dd
+{
+    font-size: 1.2em;    
 }
 
 #query_breadcrumbs dl dd
