--- a/portal/src/main/webapp/theme/cw/css/colors.css
+++ b/portal/src/main/webapp/theme/cw/css/colors.css
@@ -27,6 +27,12 @@ a:hover,a:visited:hover
 	color:#696969;
 }
 
+
+#search .search_home input.txt-input,   #search .search_result input.txt-input
+{
+    border: 1px solid #999999;
+}
+
 /*
  * @classname       azure
  * @colordef		#046f96; azure 1 (full)
@@ -41,7 +47,10 @@ a:hover,a:visited:hover
 .azure .nav_main a{color:#fff;}
 .azure .nav_main a:hover,
 .azure .nav_main li.current {background:#bddfed;}
+.azure .nav_main li.current a:link,
+.azure .nav_main li.current a:visited{color:#000;}
 .azure .nav_bottom{background:#bddfed;}
+
 
 /* information boxes  */
 .azure .box{border:1px solid #deeff6;}
@@ -54,7 +63,7 @@ a:hover,a:visited:hover
 /*.azure .breadcrumb a:link, .azure .breadcrumb a:visited {color: #154273; text-decoration: underline;}*/
 
 /* search forms */
-.azure #search #search_simple {background: #fff;}
+.azure #search #search_simple {background: #eaeaea;}
 .azure #search .search_advanced table td {background: #eaeaea;}
 
 /* results pages */
@@ -63,12 +72,6 @@ a:hover,a:visited:hover
 
 .azure #item-detail h1 {background: #046f96; color:#ffffff;}
 
-/*
- * @classname       azure
- * @colordef		#01689b; azure 1 (full)
- * @colordef		#cce0f1; azure 2 (lighter)
- * @colordef		#deeff6; azure 3 (lightest)
-*/
 
 /* header elements */
 .blue .title_bar{background:#deeff6;}
@@ -88,12 +91,12 @@ a:hover,a:visited:hover
 .blue .box h4{background:#cce0f1;}
 
 /* breadcrumbs */
-.blue .breadcrumb {color: #767676;}
-.blue .breadcrumb a:link, .blue .breadcrumb a:visited {color: #154273; text-decoration: underline;}
+/*.blue .breadcrumb {color: #767676;}*/
+/*.blue .breadcrumb a:link, .blue .breadcrumb a:visited {color: #154273; text-decoration: underline;}*/
 
 /* search forms */
-/*.blue #search #search_simple {background: #eaeaea;}*/
-/*.blue #search .search_advanced table td {background: #eaeaea;}*/
+.blue #search #search_simple {background: #eaeaea;}
+.blue #search .search_advanced table td {background: #eaeaea;}
 
 /* results pages */
 .blue .brief-thumb-container,
@@ -113,6 +116,8 @@ a:hover,a:visited:hover
 .brown .nav_main a{color:#fff;}
 .brown .nav_main a:hover,
 .brown .nav_main li.current {background:#e0d4bc;}
+.brown .nav_main li.current a:link,
+.brown .nav_main li.current a:visited{color:#000;}
 .brown .nav_bottom{background:#e0d4bc;}
 
 /* information boxes  */
@@ -122,12 +127,12 @@ a:hover,a:visited:hover
 .brown .box h4{background:#f0eade;}
 
 /* breadcrumbs */
-.brown .breadcrumb {color: #767676;}
-.brown .breadcrumb a:link, .brown .breadcrumb a:visited {color: #154273; text-decoration: underline;}
+/*.brown .breadcrumb {color: #767676;}*/
+/*.brown .breadcrumb a:link, .brown .breadcrumb a:visited {color: #154273; text-decoration: underline;}*/
 
 /* search forms */
-/*.brown #search #search_simple {background: #fff;}*/
-/*.brown #search .search_advanced table td {background: #f0eade;}*/
+.brown #search #search_simple {background: #fff;}
+.brown #search .search_advanced table td {background: #f0eade;}
 
 /* results pages */
 .brown .brief-thumb-container,
