--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -630,6 +630,7 @@ a.disabled
 	padding:2em 0;
 }
 
+
 #admin-block
 {
 	-moz-box-shadow:3px 3px 4px #bbb;
@@ -654,6 +655,10 @@ a.disabled
 #admin-block p
 {
 	padding:.5em;
+}
+
+table.user-options {
+    margin: 0;
 }
 
 table.user-options .ui-icon
