--- a/portal/src/main/webapp/theme/default/css/reset-text-grid.css
+++ b/portal/src/main/webapp/theme/default/css/reset-text-grid.css
@@ -144,6 +144,17 @@ fieldset {
 	margin-bottom: 20px;
 }
 
+
+table { border-collapse: separate; border-spacing: 0.2em; margin: 0 0 2.2em -0.2em; text-align: left; width: 100%; }
+th { font-size: 1.1em; font-weight: normal; background: #e1e1e1; }
+th, td { padding: 0.4em 0.9em 0.4em 0.5em; }
+td { background: #f5f5f5; }
+tr.even td { background: #f0f0f0; }
+tfoot { font-style: italic; }
+caption { font-weight: bold; padding-left: 0.2em; padding-bottom: 1em; text-align: left; }
+table th { white-space: nowrap; }
+.table { padding-right: 20px; }
+
 /*_______________________GRID________________________________*/
 
 /*
