--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -338,12 +338,13 @@ ul.nav_query_breadcrumbs
 	float:right;
 }
 
-#view-select a:link {
-  margin: .25em 0 0 1em;
+#view-select a:link, #view-select a:visited {
+  margin: 0 0 0 1em;
     float: right;
 }
 #view-select select {
   float: left;
+  height: 20px;
 }
 #results table caption
 {
