--- a/portal/src/main/webapp/theme/cw/css/screen.css
+++ b/portal/src/main/webapp/theme/cw/css/screen.css
@@ -376,7 +376,15 @@ ul.nav_query_breadcrumbs
 .brief-content-container ul li {
     background: none;
     padding: 0;
-    font-weight: bold;
+}
+
+.brief-content-container h6 {
+    font-size: 1.25em;
+    font-weight: normal;
+}
+
+.brief-content-container h6 a:link, .brief-content-container h6 a:visited {
+    text-decoration: underline;
 }
 
 #no-result
