--- a/portal/src/main/webapp/theme/basic/css/reset-text-grid.css
+++ b/portal/src/main/webapp/theme/basic/css/reset-text-grid.css
@@ -145,7 +145,7 @@ fieldset {
 }
 
 
-table { border-collapse: separate; border-spacing: 0.2em; margin: 0 0 2.2em -0.2em; text-align: left; width: 100%; }
+table { border-collapse: separate; border-spacing: 0.2em; text-align: left;  }
 th { font-size: 1.1em; font-weight: normal; background: #e1e1e1; }
 th, td { padding: 0.4em 0.9em 0.4em 0.5em; }
 td { background: #f5f5f5; }
